# discoveo

./: CLAUDE.md  Cargo.toml  UX.md  article.md  pitch-deck.md  project.md  roadmap.md
.claude/: settings.local.json
api/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  todo.md
api/.claude/: settings.local.json
api/migrations/: 20260216120000_add_survey_responses.sql  20260216170000_add_survey_embeddings.sql  20260217120000_add_feedback_analysis.sql  20260217130000_cascade_delete_projects.sql  20260218120000_add_cro_reports.sql
api/src/: main.rs
api/src/api/: error.rs
api/src/api/handler/: connector.rs  cro.rs  feedback.rs  funnel.rs  ga4.rs  mod.rs  survey.rs
api/src/infrastructure/: cro_repository.rs  feedback_repository.rs  funnel_repository.rs  mod.rs  project_repository.rs  survey_repository.rs
api/src/models/: connector.rs  cro_report.rs  feedback.rs  mod.rs  survey.rs
api/src/services/: connector_service.rs  cro_agent_service.rs  cro_tools.rs  embedding_service.rs  feedback_service.rs  ga4_service.rs  mod.rs  storage_service.rs  storage_utils.rs
migrations/: 20260211160457_add_connector_and_project.sql
src/: config.rs
src/api/: error.rs
src/api/handler/: connector.rs  ga4.rs  project.rs
src/infrastructure/: connector_repository.rs
src/models/: project.rs
src/services/: ga4_service.rs  mod.rs  storage_service.rs
workspace/: .gitignore  README.md  package.json  pnpm-lock.yaml
workspace/src/: App.vue  config.ts  main.ts
workspace/src/components/: AIRecommendationView.vue  DashboardView.vue  FunnelChart.vue  FunnelsView.vue  GA4OAuthCallback.vue  LoginView.vue  PagePathsTable.vue  ProjectDetail.vue  ProjectForm.vue  ProjectList.vue  ScrollDepthChart.vue  SurveyUploadView.vue  SurveysView.vue
workspace/src/plugins/: vuetify.ts
workspace/src/services/: croService.ts  ga4FunnelService.ts  ga4Service.ts  projectService.ts  qualitativeService.ts
workspace/src/types/: analytics.ts  funnel.ts  ga4.ts  project.ts
