[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "multipart"] }
csv = "1.3"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "runtime-tokio-rustls", "postgres", "json", "uuid", "macros", "chrono" ] }
uuid = { version = "1", features = ["v7", "serde"] }

# GA4 OAuth dependencies
oauth2 = { version = "4.4", features = ["reqwest"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }

# Vector embeddings
# Using older fastembed version with better Intel Mac support
fastembed = "4"
pgvector = { version = "0.4", features = ["sqlx"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# DuckDB for parquet storage with upsert
duckdb = { version = "1.4", features = ["bundled"] }
urlencoding = "2.1.3"
